# CPE-450.Capstone

./: .gitignore  README.md
Dashboard/: CPE 450 - Resources.txt  CPE 450 - Startup Guide.txt
Dashboard/Python Program/: UMC500-Curr.xml  UMC500-Curr_109.xml  UMC500-Curr_125.xml  cPush.py  lPush.py
Dashboard/XML Formats/: UMC500-Curr_108.xml  UMC500-Curr_114.xml  UMC500-Curr_122.xml  UMC500-Curr_125.xml  UMC500-Curr_423.xml  UMC500ss-Current.xml  UMC500ss-Probe.xml  current_01.xml  current_02.xml  current_03.xml  current_xaxistest.xml
Firmware/: CMakeLists.txt  prj.conf
Firmware/applications/: main.c
Firmware/general/: General_Includes.h
Firmware/services/: CMakeLists.txt
Firmware/services/TEMP_ACC_SENSE_SERVICE/: CMakeLists.txt  Temp_Acc_Sense_Service.c  Temp_Acc_Sense_Service.h
Hardware/: README.md
Hardware/IIS3DWB_breakout_beta/: IIS3DWB_breakout_beta.kicad_pcb  IIS3DWB_breakout_beta.kicad_prl  IIS3DWB_breakout_beta.kicad_pro  IIS3DWB_breakout_beta.kicad_sch  fp-lib-table
Hardware/IIS3DWB_breakout_beta/gerber/: IIS3DWB_breakout_beta-B_Cu.gbr  IIS3DWB_breakout_beta-B_Mask.gbr  IIS3DWB_breakout_beta-B_Paste.gbr  (+9 more)
Hardware/IIS3DWB_eval/: IIS3DWB_eval.kicad_pcb  IIS3DWB_eval.kicad_prl  IIS3DWB_eval.kicad_pro  IIS3DWB_eval.kicad_sch
Hardware/hw_alpha/: README.md  bringup_notes.md  connectors.kicad_sch  connectors2.kicad_sch  ethernet.kicad_sch  fp-lib-table  hw_alpha.kicad_pcb  hw_alpha.kicad_prl  hw_alpha.kicad_pro  hw_alpha.kicad_sch  mcu.kicad_sch  rs232.kicad_sch  sdio.kicad_sch  sym-lib-table  untitled.kicad_sch  wifi.kicad_sch
(+46 files in other folders)
